# gazelle:ignore

load("@bazel_gomock//:gomock.bzl", "gomock")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

gomock(
    name = "aliases",
    out = "aliases.go",
    interfaces = [
        "ReadCloser",
        "Writer",
    ],
    library = "//internal/mock/aliases",
    package = "mock",
)

gomock(
    name = "blobstore",
    out = "blobstore.go",
    interfaces = [
        "BlobAccess",
        "DemultiplexedBlobAccessGetter",
        "HTTPClient",
        "ReadBufferFactory",
    ],
    library = "//pkg/blobstore",
    package = "mock",
)

gomock(
    name = "blobstore_local",
    out = "blobstore_local.go",
    interfaces = [
        "Block",
        "BlockAllocator",
        "BlockList",
        "BlockListPutFinalizer",
        "BlockListPutWriter",
        "BlockReferenceResolver",
        "DataSyncer",
        "KeyBlobGetter",
        "KeyBlobMap",
        "KeyBlobPutFinalizer",
        "KeyBlobPutWriter",
        "KeyLocationMap",
        "LocationBlobGetter",
        "LocationBlobMap",
        "LocationBlobPutFinalizer",
        "LocationBlobPutWriter",
        "LocationRecordArray",
        "PersistentStateSource",
        "PersistentStateStore",
    ],
    library = "//pkg/blobstore/local",
    package = "mock",
)

gomock(
    name = "blobstore_replication",
    out = "blobstore_replication.go",
    interfaces = ["BlobReplicator"],
    library = "//pkg/blobstore/replication",
    package = "mock",
)

gomock(
    name = "blockdevice",
    out = "blockdevice.go",
    interfaces = ["BlockDevice"],
    library = "//pkg/blockdevice",
    package = "mock",
)

gomock(
    name = "buffer",
    out = "buffer.go",
    interfaces = [
        "ChunkReader",
        "DataIntegrityCallback",
        "ErrorHandler",
        "ReadAtCloser",
    ],
    library = "//pkg/blobstore/buffer",
    package = "mock",
)

gomock(
    name = "builder",
    out = "builder.go",
    interfaces = [
        "BuildQueue",
        "DemultiplexedBuildQueueGetter",
    ],
    library = "//pkg/builder",
    package = "mock",
)

gomock(
    name = "clock",
    out = "clock.go",
    interfaces = [
        "Clock",
        "Timer",
    ],
    library = "//pkg/clock",
    package = "mock",
)

gomock(
    name = "cloud_aws",
    out = "cloud_aws.go",
    interfaces = ["S3"],
    library = "//pkg/cloud/aws",
    package = "mock",
)

gomock(
    name = "digest",
    out = "digest.go",
    interfaces = ["InstanceNameMatcher"],
    library = "//pkg/digest",
    package = "mock",
)

gomock(
    name = "filesystem",
    out = "filesystem.go",
    interfaces = [
        "Directory",
        "FileAppender",
        "FileReader",
        "FileReadWriter",
    ],
    library = "//pkg/filesystem",
    package = "mock",
)

gomock(
    name = "filesystem_path",
    out = "filesystem_path.go",
    interfaces = [
        "ComponentWalker",
        "ScopeWalker",
    ],
    library = "//pkg/filesystem/path",
    package = "mock",
)

gomock(
    name = "grpc",
    out = "grpc.go",
    interfaces = [
        "Authenticator",
        "ClientDialer",
        "ClientFactory",
    ],
    library = "//pkg/grpc",
    package = "mock",
)

gomock(
    name = "grpc_go",
    out = "grpc_go.go",
    interfaces = [
        "ClientConnInterface",
        "ClientStream",
        "Streamer",
        "UnaryInvoker",
    ],
    library = "@org_golang_google_grpc//:grpc",
    package = "mock",
)

gomock(
    name = "redis",
    out = "redis.go",
    interfaces = ["RedisClient"],
    library = "//pkg/blobstore",
    package = "mock",
)

gomock(
    name = "remoteexecution",
    out = "remoteexecution.go",
    interfaces = [
        "Execution_ExecuteServer",
        "Execution_WaitExecutionServer",
    ],
    library = "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
    package = "mock",
)

gomock(
    name = "util",
    out = "util.go",
    interfaces = ["ErrorLogger"],
    library = "//pkg/util",
    package = "mock",
)

go_library(
    name = "mock",
    srcs = [
        ":aliases.go",
        ":blobstore.go",
        ":blobstore_local.go",
        ":blobstore_replication.go",
        ":blockdevice.go",
        ":buffer.go",
        ":builder.go",
        ":clock.go",
        ":cloud_aws.go",
        ":digest.go",
        ":filesystem.go",
        ":filesystem_path.go",
        ":grpc.go",
        ":grpc_go.go",
        ":redis.go",
        ":remoteexecution.go",
        ":util.go",
    ],
    importpath = "github.com/buildbarn/bb-storage/internal/mock",
    visibility = ["//:__subpackages__"],
    deps = [
        "//pkg/blobstore",
        "//pkg/blobstore/buffer",
        "//pkg/blobstore/local",
        "//pkg/builder",
        "//pkg/clock",
        "//pkg/digest",
        "//pkg/filesystem",
        "//pkg/filesystem/path",
        "//pkg/proto/blobstore/local",
        "//pkg/proto/configuration/grpc",
        "//pkg/util",
        "@com_github_aws_aws_sdk_go//aws/request",
        "@com_github_aws_aws_sdk_go//service/s3",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_go_redis_redis_v8//:redis",
        "@com_github_golang_mock//gomock",
        "@go_googleapis//google/longrunning:longrunning_go_proto",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//metadata",
    ],
)
