load("@rules_go//extras:gomock.bzl", "gomock")
load("@rules_go//go:def.bzl", "go_library")

gomock(
    name = "aliases",
    out = "aliases.go",
    interfaces = [
        "AEAD",
        "IntTreeDirectoryVisitor",
        "ReadCloser",
        "ResponseWriter",
        "RoundTripper",
        "Writer",
    ],
    library = "//internal/mock/aliases",
    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "mock",
)

gomock(
    name = "auth",
    out = "auth.go",
    interfaces = [
        "Authorizer",
        "RequestHeadersAuthenticator",
    ],
    library = "//pkg/auth",
    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "mock",
)

gomock(
    name = "blobstore",
    out = "blobstore.go",
    interfaces = [
        "BlobAccess",
        "DemultiplexedBlobAccessGetter",
        "ReadBufferFactory",
        "ReadWriterAt",
    ],
    library = "//pkg/blobstore",
    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "mock",
)

gomock(
    name = "blobstore_local",
    out = "blobstore_local.go",
    interfaces = [
        "Block",
        "BlockAllocator",
        "BlockList",
        "BlockListPutFinalizer",
        "BlockListPutWriter",
        "BlockPutWriter",
        "BlockReferenceResolver",
        "DataSyncer",
        "KeyLocationMap",
        "LocationBlobGetter",
        "LocationBlobMap",
        "LocationBlobPutFinalizer",
        "LocationBlobPutWriter",
        "LocationRecordArray",
        "PersistentStateSource",
        "PersistentStateStore",
    ],
    library = "//pkg/blobstore/local",
    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "mock",
)

gomock(
    name = "blobstore_replication",
    out = "blobstore_replication.go",
    interfaces = ["BlobReplicator"],
    library = "//pkg/blobstore/replication",
    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "mock",
)

gomock(
    name = "blobstore_sharding",
    out = "blobstore_sharding.go",
    interfaces = ["ShardSelector"],
    library = "//pkg/blobstore/sharding",
    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "mock",
)

gomock(
    name = "blobstore_legacy_sharding",
    out = "blobstore_legacy_sharding.go",
    interfaces = ["ShardPermuter"],
    library = "//pkg/blobstore/sharding/legacy",
    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "mock",
)

gomock(
    name = "blobstore_slicing",
    out = "blobstore_slicing.go",
    interfaces = ["BlobSlicer"],
    library = "//pkg/blobstore/slicing",
    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "mock",
)

gomock(
    name = "blockdevice",
    out = "blockdevice.go",
    interfaces = ["BlockDevice"],
    library = "//pkg/blockdevice",
    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "mock",
)

gomock(
    name = "buffer",
    out = "buffer.go",
    interfaces = [
        "ChunkReader",
        "DataIntegrityCallback",
        "ErrorHandler",
        "ReadAtCloser",
    ],
    library = "//pkg/blobstore/buffer",
    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "mock",
)

gomock(
    name = "builder",
    out = "builder.go",
    interfaces = [
        "BuildQueue",
        "DemultiplexedBuildQueueGetter",
    ],
    library = "//pkg/builder",
    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "mock",
)

gomock(
    name = "capabilities",
    out = "capabilities.go",
    interfaces = ["Provider"],
    library = "//pkg/capabilities",
    mock_names = {"Provider": "MockCapabilitiesProvider"},
    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "mock",
)

gomock(
    name = "clock",
    out = "clock.go",
    interfaces = [
        "Clock",
        "Ticker",
        "Timer",
    ],
    library = "//pkg/clock",
    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "mock",
)

gomock(
    name = "cloud_aws",
    out = "cloud_aws.go",
    interfaces = ["S3Client"],
    library = "//pkg/cloud/aws",
    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "mock",
)

gomock(
    name = "cloud_gcp",
    out = "cloud_gcp.go",
    interfaces = [
        "StorageBucketHandle",
        "StorageClient",
        "StorageObjectHandle",
    ],
    library = "//pkg/cloud/gcp",
    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "mock",
)

gomock(
    name = "digest",
    out = "digest.go",
    interfaces = ["InstanceNameMatcher"],
    library = "//pkg/digest",
    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "mock",
)

gomock(
    name = "filesystem",
    out = "filesystem.go",
    interfaces = [
        "Directory",
        "FileAppender",
        "FileReader",
        "FileReadWriter",
    ],
    library = "//pkg/filesystem",
    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "mock",
)

gomock(
    name = "filesystem_path",
    out = "filesystem_path.go",
    interfaces = [
        "ComponentWalker",
        "ScopeWalker",
    ],
    library = "//pkg/filesystem/path",
    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "mock",
)

gomock(
    name = "grpc",
    out = "grpc.go",
    interfaces = [
        "Authenticator",
        "ClientDialer",
        "ClientFactory",
    ],
    library = "//pkg/grpc",
    mock_names = {"Authenticator": "MockGRPCAuthenticator"},
    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "mock",
)

gomock(
    name = "grpc_go",
    out = "grpc_go.go",
    interfaces = [
        "ClientConnInterface",
        "ClientStream",
        "ServerStream",
        "StreamHandler",
        "Streamer",
        "UnaryHandler",
        "UnaryInvoker",
    ],
    library = "@org_golang_google_grpc//:grpc",
    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "mock",
)

gomock(
    name = "http",
    out = "http.go",
    interfaces = ["Authenticator"],
    library = "//pkg/http",
    mock_names = {"Authenticator": "MockHTTPAuthenticator"},
    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "mock",
)

gomock(
    name = "jwt",
    out = "jwt.go",
    interfaces = [
        "SignatureGenerator",
        "SignatureValidator",
    ],
    library = "//pkg/jwt",
    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "mock",
)

gomock(
    name = "prometheus",
    out = "prometheus.go",
    interfaces = ["Gatherer"],
    library = "@com_github_prometheus_client_golang//prometheus",
    mock_names = {"Gatherer": "MockPrometheusGatherer"},
    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "mock",
)

gomock(
    name = "random",
    out = "random.go",
    interfaces = ["ThreadSafeGenerator"],
    library = "//pkg/random",
    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "mock",
)

gomock(
    name = "remoteexecution",
    out = "remoteexecution.go",
    interfaces = [
        "Execution_ExecuteServer",
        "Execution_WaitExecutionServer",
    ],
    library = "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "mock",
)

gomock(
    name = "trace",
    out = "trace.go",
    interfaces = [
        "Span",
        "Tracer",
        "TracerProvider",
    ],
    library = "@io_opentelemetry_go_otel_trace//:trace",
    mock_names = {
        "Span": "BareMockSpan",
        "Tracer": "BareMockTracer",
        "TracerProvider": "BareMockTracerProvider",
    },
    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "mock",
)

gomock(
    name = "util",
    out = "util.go",
    interfaces = [
        "ErrorLogger",
        "ProtoBytesFieldVisitor",
        "UUIDGenerator",
    ],
    library = "//pkg/util",
    mockgen_model_library = "@org_uber_go_mock//mockgen/model",
    mockgen_tool = "@org_uber_go_mock//mockgen",
    package = "mock",
)

go_library(
    name = "mock",
    srcs = [
        "aliases.go",
        "auth.go",
        "blobstore.go",
        "blobstore_legacy_sharding.go",
        "blobstore_local.go",
        "blobstore_replication.go",
        "blobstore_sharding.go",
        "blobstore_slicing.go",
        "blockdevice.go",
        "buffer.go",
        "builder.go",
        "capabilities.go",
        "clock.go",
        "cloud_aws.go",
        "cloud_gcp.go",
        "digest.go",
        "filesystem.go",
        "filesystem_path.go",
        "grpc.go",
        "grpc_go.go",
        "http.go",
        "jwt.go",
        "prometheus.go",
        "random.go",
        "remoteexecution.go",
        "trace.go",
        "trace_wrap.go",
        "util.go",
    ],
    importpath = "github.com/buildbarn/bb-storage/internal/mock",
    visibility = ["//:__subpackages__"],
    # keep
    deps = [
        "//pkg/auth",
        "//pkg/blobstore",
        "//pkg/blobstore/buffer",
        "//pkg/blobstore/local",
        "//pkg/blobstore/sharding",
        "//pkg/blobstore/sharding/legacy",
        "//pkg/blobstore/slicing",
        "//pkg/builder",
        "//pkg/clock",
        "//pkg/cloud/gcp",
        "//pkg/digest",
        "//pkg/filesystem",
        "//pkg/filesystem/path",
        "//pkg/program",
        "//pkg/proto/blobstore/local",
        "//pkg/proto/configuration/grpc",
        "//pkg/util",
        "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
        "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
        "@com_github_google_uuid//:uuid",
        "@com_github_prometheus_client_model//go",
        "@com_google_cloud_go_longrunning//autogen/longrunningpb",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel//codes",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@io_opentelemetry_go_otel_trace//embedded",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_protobuf//encoding/protowire",
        "@org_uber_go_mock//gomock",
    ],
)
