load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "action_cache.go",
        "action_cache_server.go",
        "blob_access_action_cache.go",
    ],
    importpath = "github.com/buildbarn/bb-storage/pkg/ac",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/blobstore:go_default_library",
        "//pkg/util:go_default_library",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["blob_access_action_cache_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/mock:go_default_library",
        "//pkg/util:go_default_library",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
