load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "auth",
    srcs = [
        "any_authorizer.go",
        "authentication_metadata.go",
        "authorizer.go",
        "jmespath_expression_authorizer.go",
        "remote_authorizer.go",
        "remote_request_headers_authenticator.go",
        "request_headers_authenticator.go",
        "static_authorizer.go",
    ],
    importpath = "github.com/buildbarn/bb-storage/pkg/auth",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/clock",
        "//pkg/digest",
        "//pkg/eviction",
        "//pkg/jmespath",
        "//pkg/otel",
        "//pkg/proto/auth",
        "//pkg/util",
        "@io_opentelemetry_go_otel//attribute",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/structpb",
    ],
)

go_test(
    name = "auth_test",
    srcs = [
        "any_authorizer_test.go",
        "authentication_metadata_test.go",
        "jmespath_expression_authorizer_test.go",
        "remote_authorizer_test.go",
        "remote_request_headers_authenticator_test.go",
        "static_authorizer_test.go",
    ],
    deps = [
        ":auth",
        "//internal/mock",
        "//pkg/digest",
        "//pkg/eviction",
        "//pkg/jmespath",
        "//pkg/proto/auth",
        "//pkg/testutil",
        "//pkg/util",
        "@com_github_stretchr_testify//require",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_proto_otlp//common/v1:common",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/structpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_uber_go_mock//gomock",
    ],
)
