load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "bb_tls",
    srcs = [
        "spiffe_tls.go",
        "tls.go",
        "tls_certificate.go",
    ],
    importpath = "github.com/buildbarn/bb-storage/pkg/bb_tls",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/clock",
        "//pkg/grpcauth",
        "//pkg/proto/configuration/grpc",
        "//pkg/proto/configuration/spiffe",
        "//pkg/proto/configuration/tls",
        "//pkg/spiffebundle",
        "//pkg/util",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_spiffe_go_spiffe_v2//bundle/x509bundle",
        "@com_github_spiffe_go_spiffe_v2//spiffeid",
        "@com_github_spiffe_go_spiffe_v2//spiffetls/tlsconfig",
        "@com_github_spiffe_go_spiffe_v2//svid/x509svid",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/durationpb",
    ],
)

go_test(
    name = "bb_tls_test",
    srcs = [
        "spiffe_tls_test.go",
        "tls_certificate_test.go",
        "tls_test.go",
    ],
    deps = [
        ":bb_tls",
        "//pkg/proto/configuration/tls",
        "//pkg/proto/configuration/grpc",
        "//pkg/proto/configuration/spiffe",
        "//pkg/testutil",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/durationpb",
    ],
)
