load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "blobstore",
    srcs = [
        "ac_read_buffer_factory.go",
        "action_result_expiring_blob_access.go",
        "authorizing_blob_access.go",
        "blob_access.go",
        "cas_read_buffer_factory.go",
        "demultiplexing_blob_access.go",
        "empty_blob_injecting_blob_access.go",
        "error_blob_access.go",
        "existence_caching_blob_access.go",
        "hierarchical_instance_names_blob_access.go",
        "http_blob_access.go",
        "icas_read_buffer_factory.go",
        "iscc_read_buffer_factory.go",
        "metrics_blob_access.go",
        "read_buffer_factory.go",
        "read_canarying_blob_access.go",
        "redis_blob_access.go",
        "reference_expanding_blob_access.go",
        "size_distinguishing_blob_access.go",
        "validation_caching_read_buffer_factory.go",
    ],
    importpath = "github.com/buildbarn/bb-storage/pkg/blobstore",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/auth",
        "//pkg/blobstore/buffer",
        "//pkg/clock",
        "//pkg/cloud/aws",
        "//pkg/digest",
        "//pkg/eviction",
        "//pkg/proto/icas",
        "//pkg/proto/iscc",
        "//pkg/util",
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_go_redis_redis_v8//:redis",
        "@com_github_klauspost_compress//zstd",
        "@com_github_prometheus_client_golang//prometheus",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "blobstore_test",
    srcs = [
        "action_result_expiring_blob_access_test.go",
        "authorizing_blob_access_test.go",
        "demultiplexing_blob_access_test.go",
        "empty_blob_injecting_blob_access_test.go",
        "existence_caching_blob_access_test.go",
        "hierarchical_instance_names_blob_access_test.go",
        "read_canarying_blob_access_test.go",
        "redis_blob_access_test.go",
        "reference_expanding_blob_access_test.go",
        "validation_caching_read_buffer_factory_test.go",
    ],
    deps = [
        ":blobstore",
        "//internal/mock",
        "//pkg/blobstore/buffer",
        "//pkg/digest",
        "//pkg/eviction",
        "//pkg/proto/icas",
        "//pkg/testutil",
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
        "@com_github_aws_aws_sdk_go_v2_service_s3//types",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
