load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "blockdevice",
    srcs = [
        "block_device.go",
        "configuration.go",
        "memory_mapped_block_device_unix.go",
        "new_block_device_from_device_disabled.go",
        "new_block_device_from_device_freebsd.go",
        "new_block_device_from_device_linux.go",
        "new_block_device_from_file_disabled.go",
        "new_block_device_from_file_unix.go",
    ],
    importpath = "github.com/buildbarn/bb-storage/pkg/blockdevice",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/configuration/blockdevice",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ] + select({
        "@rules_go//go/platform:android": [
            "//pkg/util",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:darwin": [
            "//pkg/util",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:freebsd": [
            "//pkg/util",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:ios": [
            "//pkg/util",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:linux": [
            "//pkg/util",
            "@org_golang_x_sys//unix",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "blockdevice_test",
    srcs = ["new_block_device_from_file_test.go"],
    deps = [
        ":blockdevice",
        "//pkg/testutil",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
